branches/0.1/src/objects/EmploymentHistory__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmployerCityTown__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>Employer</description>
        <label>Employer</label>
        <referenceTo>Employer__c</referenceTo>
        <relationshipLabel>Employment  History</relationshipLabel>
        <relationshipName>Employer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCurrentJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCurrentJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkedFrom__c</fullName>
        <label>Worked From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkedTo__c</fullName>
        <label>Worked To</label>
        <type>Date</type>
    </fields>
    <label>Employment  History</label>
    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment  History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>